--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="img/dog-image.jpg" alt="dog image" class="logo">
                 <ul class="nav-list"> 
                    <a href="index.html" target=_blank><li>index</li></a>
-                   <a href="about.html" target="_blank"><li>about</li></a>
+                   <a href="about.html" target="_blank"><li>about me</li></a>
                    <a href="contact.html" target="_blank"><li>contact</li></a>
                 </ul>
         </nav>
