modified:   about.html 	modified:   css/styles.css

--- a/about.html
+++ b/about.html
@@ -54,5 +54,10 @@
     <div class="copy"></div>
 </footer>
 <!--------------End Of Footer-------------------------------------->
+<nav >
+    <div class="about">about</div>
+    <div class="contet">contet</div>
+    <div class="insta">instagram</div>
+</nav>
 </body>
 </html>
